<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@+string/This is a rabbit"
        android:scaleType="centerCrop"
        android:src="@drawable/pingu"
        android:alpha="0.75"
        android:id="@+id/pingu"/>

    <LinearLayout
        android:layout_alignTop="@id/pingu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingTop="70dp"
            android:text="@string/question1"
            android:textSize="23sp"
            android:textColor="#880E4F"
            android:id="@+id/textView"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp"
                android:text="@string/option11"
                android:textColor="#F50057"
                android:id="@+id/radio1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option12"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="15dp"
                android:textColor="#F50057"
                android:id="@+id/radio2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option13"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="30dp"
                android:textColor="#F50057"
                android:id="@+id/radio3"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonText"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:onClick="checkResult"
            android:id="@+id/buttonNext"/>

    </LinearLayout>

</RelativeLayout>